# HarvardQueraCircuit

./: CITATION.cff  ExponentialSumReal.cpp  LICENSE  Makefile  ex  iqp_swap_symmetries.cpp  iqp_swap_symmetries.h  sim.cpp  sim.py  sim_k4.cpp  sim_k4_extra_cnot_layers.cpp  sim_k4_random.cpp  sim_k4_worst_case.cpp  sim_k5.cpp  sim_k5_extra_cnot_layers.cpp  sim_k5_random.cpp  sim_k5_worst_case.cpp  sim_parallel.cpp  sim_symmetries.cpp  test_symmetries.cpp
harvard_sim/: Cargo.toml
harvard_sim/src/: lib.rs  main.rs
harvard_sim/src/bit_matrix/: augmented_gauss_jordan.rs  backwards_substitution.rs  column_matrix.rs  gauss_jordan.rs  is_in_nullspace.rs  matrix.rs  mod.rs  sergey_solver.rs
harvard_sim/src/debug/: mod.rs
harvard_sim/src/debug_bv/: mod.rs
harvard_sim/src/gray_code_flip_bit/: mod.rs
harvard_sim/src/iqp_simulations/: iqp_circuit.rs  linear_systems.rs  mod.rs  simulation.rs  simulation_builder.rs  simulation_params.rs  small_int_simulation.rs  statevector.rs  swap_check.rs
harvard_sim/src/phase_polynomial/: mod.rs  monomials.rs
harvard_sim/src/qubit/: mod.rs
