[package]
name = "harvard_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.15", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
nalgebra = "0.32.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
